// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout.vue loading renders correctly 1`] = `
<div class="layout">
  <div class="layout__loading">
    <div class="layout__loading__progress"></div>
  </div>
  <div class="layout__header"></div>
  <div class="layout__content"></div>
  <site-footer-stub></site-footer-stub>
</div>
`;

exports[`Layout.vue renders correctly 1`] = `
<div class="layout">
  <!---->
  <div class="layout__header"></div>
  <div class="layout__content"></div>
  <site-footer-stub></site-footer-stub>
</div>
`;
